GSoC ideas list: Add details on some ideas

--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -1,30 +1,71 @@
 # Google Summer of Code 2018
 
-This is a list of project ideas for students applying to the Gooogle Summer
-of Code program.
+This is a list of project ideas for students applying to the Google Summer
+of Code program (GSoC 2018).
+
+It's only an indicative list, and is subject to change as Godot is very
+actively developed by hundreds of contributors. Use this list as an
+inspiration source, but feel free to come with your own ideas on what you
+would like to work on in Godot.
+
+Make sure to discuss your ideas with Godot developers on the #godotengine-devel
+IRC channel (Freenode server), so that we can help you refine your ideas
+and ensure that they fit in the Godot roadmap and architecture.
 
 ## TSCN exporter for Blender
 
-The 3D workflow is currently done by exporting the models from Blender
-in an interchange format (such as Collada or glTF) and them import into
-Godot. However, this can lead to a few inconsistencies due to the
-peculiarities of exporter and importer plugins.
+**Skills:** Python, Blender plugin API, knowledge of 3D assets structure,
+some familiarity with C++.
 
-One idea would be to create an export plugin for Blender that already
-save the model in the Godot's specific scene format.
+The 3D assets pipeline requires importing 3D models, skeletons, animations,
+etc. from thirdparty 3D modelling software such as the open source Blender,
+or the proprietary Maya or ZBrush.
 
-This would require understanding the Blender API and the text format
-of Godot scenes.
+This is usually done by exporting the models or scenes using a dedicated
+asset exchange format supported by the game engine (such as Collada or
+glTF 2.0), and then import it into Godot. However, this can lead to a few
+inconsistencies due to the peculiarities of exporter and importer plugins,
+as well as the feature set of the exchange format itself.
 
-godotengine/godot#7102
+One idea would be to create an export plugin for Blender (priviledged due
+to its open source nature) that can generate a Godot scene file directly
+from a Blender scene, bypassing the intermediate step. This would allow to
+simplify the workflow, ensure great compatibility with the Eevee PBR features,
+and export Blender shader graphs to Godot's expected scene format.
+
+This would require understanding the Blender API and Python plugin scripting,
+and the text format of Godot scenes. A proof of concept already exists to
+export meshes from Blender to Godot, but it needs to be completed to add all
+features that are shared by Blender and Godot.
+
+*Existing WIP:* https://github.com/godotengine/blender-exporter
+*Related issues:* https://github.com/godotengine/godot/issues/7102
 
 ## ARCore support and CameraServer improvements
 
-Augmented Reality is a new trend in game and application development.
-This project is about creating an interface to support the ARCore library
-and improving the progress in the CameraServer proposal.
+**Skills:** Android/Java/C++
 
-godotengine/godot#10643
+Augmented Reality (AR) is a new trend in game and application development.
+Godot 3.0 added initial support for AR via its ARVRServer and CameraServer
+interfaces, with some support for the ARKit library for iOS AR projects.
+
+The equivalent for Android devices is ARCore, and it should be possible to
+write an Android module for Godot to expose ARCore features to the Android
+version of the engine.
+
+The work would also imply ensuring that the ARCore, ARKit and possible future
+backends all use a shared and consistent API, so that users could create
+AR games for both Android and iOS using a high level API. Godot already has
+an initial implementation of such a common interface in the ARVRServer class,
+and a pending proposal of a CameraServer API which needs to be extended.
+Improving those classes to ensure a user-friendly design would typically
+be done in parallel to implementing ARCore support.
+
+An option could also be to explore the open source ARToolKit for iOS, as
+replacement/alternative to Apple's ARKit.
+
+*Existing WIP:* https://github.com/godotengine/godot/issues/10643
+*Related issues:* https://github.com/godotengine/godot/issues/12714
 
 ## GearVR and Daydream support
 
@@ -51,10 +92,10 @@ godotengine/godot#13268
 ## WebRTC integration
 
 WebRTC is a project that enables real time communication inside the browser
-with ease. Adding support for it on Godot would allow game developers to
-make multiplayer games on mobile and on the browser without issues.
+with ease. Adding support for it in Godot would allow game developers to
+make multiplayer games on all platforms using a common protocol.
 
-godotengine/godot#12108
+*Related issues:* https://github.com/godotengine/godot/issues/12108
 
 ## Improve i18n support
 
@@ -90,7 +131,8 @@ godotengine/godot#7392
 
 ## Plugins for video decoding
 
-It's quite common for games to rely on videos for intros and cutscenes. However, supporting all the myriad of formats out-of-the-box is unpractical
+It's quite common for games to rely on videos for intros and cutscenes.
+However, supporting all the myriad of formats out-of-the-box is unpractical
 for Godot's unbloated and open source approach.
 
 The idea is to have multiple official plugins that can be added to each
