Changes in relation to AR and VR

--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -67,17 +67,55 @@ replacement/alternative to Apple's ARKit.
 *Existing WIP:* https://github.com/godotengine/godot/issues/10643
 *Related issues:* https://github.com/godotengine/godot/issues/12714
 
+## Hololens support
+
+**Skills:** UWP/C++
+
+The Hololens is a very interesting device from Microsoft that is mainly used 
+in business software. Priliminary experimentation has proven that the UWP
+build of Godot will run on the hololens.
+
+The work here would involve joining Godot to the Holographic SDK in order to
+obtain tracking information and render stereo scopic output to the Hololens.
+
+We believe this can be build ontop of the existing AR framework and likely 
+implemented as a GDNative plugin. Because the Hololens is a see through
+device this AR solution is not dependent on the CameraServer implementation.
+
 ## GearVR and Daydream support
+
+**Skills:** Android/Java/C++
 
 Another modern topic is virtual reality. The participants of this project
 would work on support two SDKs for mobile VR: GearVR and Daydream. This would
-be based on the Godot's VR backend, which is already availabled.
+be based on the Godot's VR backend, which is already available.
 
 ## Oculus Rift support
 
-Also for Virtual Reality, but this time for desktop. Oculus Rift is one of
-the pioneers of VR headsets and adding support for it would certainly be
-and advantage for Godot.
+**Skills:** C++
+
+Support for Oculus Rift was added to Godot early 2018 however there are a 
+number of improvements that Godot can benefit from that are interesting
+projects for students to persue.
+
+The Oculus SDK has two modules that are interesting projects in their own right to implement ontop of the existing interface:
+- The Avatar SDK, allows bringing in the users avatar, render models for controllers
+- The Audio SDK, which has a number of interesting functions specific to audio in a VR setting. While Godots own audio system may already cover all the features this may be interesting to include support for.
+
+Other projects of interest are:
+- improving the support for timewarp, Oculus' predictive system to combat latency issues when rendering to the HMD
+- improving the support for touch controllers to reflect hand positions
+
+*Existing WIP:* https://github.com/BastiaanOlij/godot_oculus
+
+## Microsoft Mixed Reality
+
+**Skills:** UWP/C++
+
+While this has some overlap with the Hololens and anyone who wants to work on this would be smart to team up with whomever picks up Hololens the mixed reality implementation does have a number of differences to the Hololens implementation.
+For instance one thing that needs to be investigated here is whether MR support can be added to the normal Windows build of Godot and not rely on UWP. 
+
+The VR headsets that are part of the MR ecosystem are still under represented in other game engines even though they offer a cheap entry into VR.
 
 ## Microphone API and audio input
 
