General fixes to the GSOC list
- Spelling
- Link to issues
- Skills

--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -18,7 +18,7 @@ and ensure that they fit in the Godot roadmap and architecture.
 some familiarity with C++.
 
 The 3D assets pipeline requires importing 3D models, skeletons, animations,
-etc. from thirdparty 3D modelling software such as the open source Blender,
+etc. from thirdparty 3D modeling software such as the open source Blender,
 or the proprietary Maya or ZBrush.
 
 This is usually done by exporting the models or scenes using a dedicated
@@ -27,7 +27,7 @@ glTF 2.0), and then import it into Godot. However, this can lead to a few
 inconsistencies due to the peculiarities of exporter and importer plugins,
 as well as the feature set of the exchange format itself.
 
-One idea would be to create an export plugin for Blender (priviledged due
+One idea would be to create an export plugin for Blender (privileged due
 to its open source nature) that can generate a Godot scene file directly
 from a Blender scene, bypassing the intermediate step. This would allow to
 simplify the workflow, ensure great compatibility with the Eevee PBR features,
@@ -67,19 +67,19 @@ replacement/alternative to Apple's ARKit.
 *Existing WIP:* https://github.com/godotengine/godot/issues/10643
 *Related issues:* https://github.com/godotengine/godot/issues/12714
 
-## Hololens support
+## HoloLens support
 
 **Skills:** UWP/C++
 
-The Hololens is a very interesting device from Microsoft that is mainly used 
-in business software. Priliminary experimentation has proven that the UWP
-build of Godot will run on the hololens.
+The HoloLens is a very interesting device from Microsoft that is mainly used 
+in business software. Preliminary experimentation has proven that the UWP
+build of Godot will run on the HoloLens.
 
 The work here would involve joining Godot to the Holographic SDK in order to
-obtain tracking information and render stereo scopic output to the Hololens.
+obtain tracking information and render stereoscopic output to the HoloLens.
 
-We believe this can be build ontop of the existing AR framework and likely 
-implemented as a GDNative plugin. Because the Hololens is a see through
+We believe this can be build on top of the existing AR framework and likely 
+implemented as a GDNative plugin. Because the HoloLens is a see through
 device this AR solution is not dependent on the CameraServer implementation.
 
 ## GearVR and Daydream support
@@ -96,11 +96,11 @@ be based on the Godot's VR backend, which is already available.
 
 Support for Oculus Rift was added to Godot early 2018 however there are a 
 number of improvements that Godot can benefit from that are interesting
-projects for students to persue.
+projects for students to pursue.
 
-The Oculus SDK has two modules that are interesting projects in their own right to implement ontop of the existing interface:
+The Oculus SDK has two modules that are interesting projects in their own right to implement on top of the existing interface:
 - The Avatar SDK, allows bringing in the users avatar, render models for controllers
-- The Audio SDK, which has a number of interesting functions specific to audio in a VR setting. While Godots own audio system may already cover all the features this may be interesting to include support for.
+- The Audio SDK, which has a number of interesting functions specific to audio in a VR setting. While Godot's own audio system may already cover all the features this may be interesting to include support for.
 
 Other projects of interest are:
 - improving the support for timewarp, Oculus' predictive system to combat latency issues when rendering to the HMD
@@ -112,12 +112,14 @@ Other projects of interest are:
 
 **Skills:** UWP/C++
 
-While this has some overlap with the Hololens and anyone who wants to work on this would be smart to team up with whomever picks up Hololens the mixed reality implementation does have a number of differences to the Hololens implementation.
+While this has some overlap with the HoloLens and anyone who wants to work on this would be smart to team up with whomever picks up Hololens the mixed reality implementation does have a number of differences to the HoloLens implementation.
 For instance one thing that needs to be investigated here is whether MR support can be added to the normal Windows build of Godot and not rely on UWP. 
 
 The VR headsets that are part of the MR ecosystem are still under represented in other game engines even though they offer a cheap entry into VR.
 
 ## Microphone API and audio input
+
+**Skills:** C++/Audio/OS API
 
 There is a few genres of games that relies on audio input from the player,
 especially through the device's microphone.
@@ -125,9 +127,11 @@ especially through the device's microphone.
 This project is about supporting such input in the many platforms that Godot
 supports, both desktop and mobile.
 
-godotengine/godot#13268
+*Related issues:* https://github.com/godotengine/godot/issues/13268
 
 ## WebRTC integration
+
+**Skills:** C++/Network
 
 WebRTC is a project that enables real time communication inside the browser
 with ease. Adding support for it in Godot would allow game developers to
@@ -137,25 +141,31 @@ make multiplayer games on all platforms using a common protocol.
 
 ## Improve i18n support
 
-Godot currenlty uses CSV files for game translations but this format is not widely supported by the translation engines.
+**Skills:** C++
+
+Godot currently uses CSV files for game translations but this format is not widely supported by the translation engines.
 
 This project would consist in providing support for `gettext` features (
 `.po ` and `.mo` files), which is more capable and easier to make translations
 using specialized third-party software.
 
-godotengine/godot#9398
+*Related issues:* https://github.com/godotengine/godot/issues/9398
 
 ## Itertools library for GDScript
 
-Python's itertools is a powerfull library to deal with iterators and
+**Skills:** C++
+
+Python's itertools is a powerful library to deal with iterators and
 combinatorics.
 
 This project consists in making most or all of those functions available
 for GDScript code, to be readily used in game projects.
 
-godotengine/godot#9264
+*Related issues:* https://github.com/godotengine/godot/issues/9264
 
 ## GDScript Code formatter
+
+**Skills:** C++/GDScript
 
 The integrated script editor of Godot is a great tool for editing GDScript
 files, with code folding and auto-completion. However, there's nothing yet
@@ -165,9 +175,11 @@ Following this idea, the applicant would work on a set of editor features
 to define code beautifier rules and apply them automatically to the source
 code.
 
-godotengine/godot#7392
+*Related issues:* https://github.com/godotengine/godot/issues/7392
 
 ## Plugins for video decoding
+
+**Skills:** C/C++
 
 It's quite common for games to rely on videos for intros and cutscenes.
 However, supporting all the myriad of formats out-of-the-box is unpractical
@@ -177,8 +189,9 @@ The idea is to have multiple official plugins that can be added to each
 game individually using the GDNative interface, allowing many more video
 codecs to be supported than what's currently available.
 
-
 ## Plugins for MIDI and MOD support
+
+**Skills:** C/C++
 
 MIDI and MOD are small audio formats that are based on events and musical
 information, rather than storing the digitalization of a sound.
@@ -187,6 +200,8 @@ Supporting this would require the ability for users to set sample libraries
 and loading the files in editor as resources (by using the import system).
 
 ## Template builder for Android and iOS
+
+**Skills:** C++
 
 It's common for mobile applications to load extra modules, in particular for
 ad support (which is a common request). Since Godot won't pick a specific
@@ -197,6 +212,8 @@ allow game developers to bundle modules in the export process.
 
 ## Headless version for server applications
 
+**Skills:** C++
+
 Sometimes Godot need to run in a server environment, be it to act as a
 server for a game, or to be used in a Continuous Integration environment.
 
@@ -204,5 +221,4 @@ The headless version would have no requirement for sound cards nor graphical
 capabilities, since those are not available on servers. This would require a
 dummy graphics and audio drivers for Godot.
 
-godotengine/godot#11389
-Itertools like class in gdscript https://github.com/godotengine/godot/issues/9264
+*Related issues:* https://github.com/godotengine/godot/issues/11389
