Add some details to the itertools project

--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -155,11 +155,13 @@ using specialized third-party software.
 
 **Skills:** C++
 
-Python's itertools is a powerful library to deal with iterators and
-combinatorics.
-
-This project consists in making most or all of those functions available
+Python's [itertools](https://docs.python.org/3/library/itertools.html) is a powerful library to deal with iterators and
+combinatorics. This project consists in making most or all of those functions available
 for GDScript code, to be readily used in game projects.
+
+Since those functions are not useful for most type of games, this is meant to
+recreate the itertools functions in a GDNative library that would then be available
+in Godot's Asset Library for those who need it.
 
 *Related issues:* https://github.com/godotengine/godot/issues/9264
 
