Adds an idea for a level design tool

--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -224,3 +224,14 @@ capabilities, since those are not available on servers. This would require a
 dummy graphics and audio drivers for Godot.
 
 *Related issues:* https://github.com/godotengine/godot/issues/11389
+
+## Plugin: A tool to edit meshes in the editor
+
+**Skills:** C++
+
+To simplify the workflow of the level designer, it might be interesting to
+implement a new tool to block out levels within the editor. It would allow
+creating basic shape, combine then with binary modifiers, extrude them, etc...
+This should be made as a gdnative plugin.
+
+*Related issues:* https://github.com/godotengine/godot/issues/17411
