--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -235,3 +235,24 @@ creating basic shape, combine then with binary modifiers, extrude them, etc...
 This should be made as a gdnative plugin.
 
 *Related issues:* https://github.com/godotengine/godot/issues/17411
+
+## A threaded and paged filesystem cache ##
+
+**Skills:** hardcore C++
+
+On most platforms, the OS takes care of caching filesystem activity and it
+does its best to serve the wide variety of applications that run on the system.
+Sonetimes howver, that's not enough, either because a game will require a 
+specific caching behavior that the system doesn't provide, or because there's
+no cache at all in the OS. In that case we currenly use the FileAccessCached
+class, which is a nice hack, but not enough.
+
+The objective would be to create a class that manages all the cached content
+in pages, and provides features such as reading ahead for streamed files,
+scheduling reads for files that will be needed in the future, queueing simultaneous
+reads from the same device while threading them fron separate devices, etc. Not all
+features will be finished in one summer, but the basic architecture should he there.
+
+Could be done mostly as a gdnative midule, but might require some hooks in the
+engine core.
+
