--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -256,3 +256,15 @@ features will be finished in one summer, but the basic architecture should he th
 Could be done mostly as a gdnative midule, but might require some hooks in the
 engine core.
 
+## "Animation Bootcamp" in Godot
+
+**Skills:** C++, 3D
+
+Implement this: 
+
+https://www.gdcvault.com/play/1020583/Animation-Bootcamp-An-Indie-Approach
+
+Should be doable as a generic/parametric character module.
+
+
+
