--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -99,7 +99,7 @@ number of improvements that Godot can benefit from that are interesting
 projects for students to pursue.
 
 The Oculus SDK has two modules that are interesting projects in their own right to implement on top of the existing interface:
-- The Avatar SDK, allows bringing in the users avatar, render models for controllers
+- The Avatar SDK, allows bringing in the user's avatar, render models for controllers
 - The Audio SDK, which has a number of interesting functions specific to audio in a VR setting. While Godot's own audio system may already cover all the features this may be interesting to include support for.
 
 Other projects of interest are:
@@ -228,9 +228,9 @@ This should be made as a gdnative plugin.
 
 On most platforms, the OS takes care of caching filesystem activity and it
 does its best to serve the wide variety of applications that run on the system.
-Sonetimes howver, that's not enough, either because a game will require a 
+Sometimes however, that's not enough, either because a game will require a 
 specific caching behavior that the system doesn't provide, or because there's
-no cache at all in the OS. In that case we currenly use the FileAccessCached
+no cache at all in the OS. In that case we currently use the FileAccessCached
 class, which is a nice hack, but not enough.
 
 The objective would be to create a class that manages all the cached content
