--- a/GSOC-2018.md
+++ b/GSOC-2018.md
@@ -230,7 +230,7 @@ On most platforms, the OS takes care of caching filesystem activity and it
 does its best to serve the wide variety of applications that run on the system.
 Sonetimes howver, that's not enough, either because a game will require a 
 specific caching behavior that the system doesn't provide, or because there's
-no cache at all in the OS. In that case we currenly use the FileAccessCached
+no cache at all in the OS. In that case we currenly use the FileAccessBuffered
 class, which is a nice hack, but not enough.
 
 The objective would be to create a class that manages all the cached content
