--- a/GSOC-2019.md
+++ b/GSOC-2019.md
@@ -24,7 +24,7 @@ Both Objective C and Java provide introspection APIs (Java does also in C via JN
 allow using the entire platform APIs via GDScript.
 
 It would make it much easier to directly support features of each platform that were not
-directly exposed in Godot.
+directly exposed in Godot, as it would allow calling functions and instantiating classes from the Java/ObjC world without actually needing glue code.
 
 This could be a simple assignature for one student, or two separate ones (for Android and iOS, depending on
 skill set and familiarity with the platform).
