add 'Reimplement godots themeing editor'

--- a/GSOC/GSOC-2019.md
+++ b/GSOC/GSOC-2019.md
@@ -118,3 +118,12 @@ Implement this:
 https://www.gdcvault.com/play/1020583/Animation-Bootcamp-An-Indie-Approach
 
 Should be doable as a generic/parametric character module.
+
+
+## Reimplement godots themeing editor
+**Skills:** C++, (potentially) GDScript \
+\
+Godots theming system is very simple. (It is still a game engine ;) )Styleboxes are assigend to different states of Control-Nodes. There is no cascading, no shared variables. This makes it very easy to understand, and results in very little complexity. But also comes with a cost. Setting up themes is super tidious. For examle a color change requires you to update hundreds of values. 
+
+It is the Goal to desing a theme editor, which will generate a theme with systems, like a color palette, so that we get the best of both worlds. The simplicity of godots theming, and a advanced theming structure when setting up a theme using the theme editor. There is a big amount of freedom and space for creative ideas to make creating themes a pleasure, while still keeping the core architecture as simple as possible.
+Another related task is to improve some aspects of the editor theme. (Caching icons for faster startup time. Color icons with modulation (looks better on light theme no rerender of icons when changning from dart to light) and more)
