Add multiplayer editor idea to GSoC 2019 list

--- a/GSoC/GSoC-2019.md
+++ b/GSoC/GSoC-2019.md
@@ -129,3 +129,14 @@ Godot's theming system is very simple—it is still a game engine ;)—Styleboxe
 The goal of this project is to design a theme editor, which will generate a theme with systems, like a color palette, so that we get the best of both worlds. The simplicity of Godot's theming and an advanced theming structure when setting up a theme using the theme editor. There is a big amount of freedom and space for creative ideas to make creating themes a pleasure, while still keeping the core architecture as simple as possible.
 
 Another related task is to improve some aspects of the editor theme, such as caching icons for faster startup time, color icons with modulation (looks better on light theme, no re-render of icons when changing from dark to light), and more.
+
+## Multiplayer Scene Editor
+
+**Skills:** Networking, C++
+
+An editor plugin that allows multiple people to edit the same scene, using the remote scene edition protocol we have for running games. Possible features or issues:
+
+* A central server that provides authority for the edition protocol, maybe simlpy by forwarding messages in an arbitrary order.
+* Integration with VCS (such as Git, SVN, Mercurial, etc.)
+* Resolution of conflict when a new resource is added that requires new files (i.e. someone adds a texture that other people don't have. Maybe only allow new references to files that already exist in the VCS for simplicty, or provide warnings/placeholders when a client doesn't have the file).
+
