--- a/GSoC/GSoC-2019.md
+++ b/GSoC/GSoC-2019.md
@@ -63,6 +63,14 @@ The proposal here is to amplify the abilities of Godot's translation server and 
 
 The addition of a more specialized translation library can be considered if it's small, has a permissive license, and has a feature-set adequate for game-making purposes.
 
+## Animation Motion Matching
+
+**Skills:** C/C++
+
+Godot 3.1 comes with a new animation tree system which lets you freely edit animation graphs. It would be useful to integrate an extra animation node to create [Motion Matching](http://www.gameanim.com/2016/05/03/motion-matching-ubisofts-honor/). This technique was developed by Ubisoft for the game For Honor and has quickly been used more and more in the industry.
+
+The proposal is to implement a AnimationNodeMotionMatch node in the new AnimationTree system to handle this workflow.
+
 ## GDScript Code formatter
 
 **Skills:** C++, GDScript
