Add interactive music proposal

--- a/GSoC/GSoC-2019.md
+++ b/GSoC/GSoC-2019.md
@@ -53,6 +53,14 @@ This project needs to add an Editor Setting with the Android SDK, detect a speci
 
 **Related issues and pull requests:** [#18865](https://github.com/godotengine/godot/issues/18865).
 
+## Interactive music system
+
+This would allow having similar to WWise or FMOD in Godot. Being able to change music moods on the fly and also supporting music playlist with shuffled sections.
+
+A detailed proposal can be read here:
+
+https://docs.google.com/document/d/1coeRyj6M0Z2WZC_qQ5DMTNSW0NxvVeEADIZIFICsq8Q/edit
+
 ## Improvement in i18n for games
 
 **Skills:** C/C++
