--- a/GSoC/GSoC-2020.md
+++ b/GSoC/GSoC-2020.md
@@ -15,15 +15,21 @@ Make sure to discuss your ideas with Godot developers on the #godotengine-devel
 IRC channel (Freenode server), so that we can help you refine your ideas
 and ensure that they fit in the Godot roadmap and architecture.
 
-## Reimplement Godot's theme editor
+## Improve Godot's theme editor
 
 **Skills:** C++, (potentially) GDScript
 
-Godot's theming system is very simple—it is still a game engine ;)—Styleboxes are assigned to different states of Control-Nodes. There is no cascading and no shared variables. This makes it very easy to understand, and results in very little complexity. But also comes with a cost. Setting up themes is super tedious. For example, a color change requires you to update hundreds of values.
+Godot's theming system is straightforward -- it is still a game engine ;). This system makes editing themes very easy to understand and results in very little complexity. 
 
-The goal of this project is to design a theme editor, which will generate a theme with systems, like a color palette, so that we get the best of both worlds. The simplicity of Godot's theming and an advanced theming structure when setting up a theme using the theme editor. There is a big amount of freedom and space for creative ideas to make creating themes a pleasure, while still keeping the core architecture as simple as possible.
+However, Godot's simple system comes with a cost. 
 
-Another related task is to improve some aspects of the editor theme, such as caching icons for faster startup time, color icons with modulation (looks better on light theme, no re-render of icons when changing from dark to light), and more.
+Although, in Godot Engine styles cascade through child nodes, this is not easily understood. There is also no shared variables.
+
+The goal of this project is to design a theme editor. The theme editor generates a theme with systems, like a color palette, so that we get the best of both worlds. We are combining Godot's simple theming and an advanced theming structure when setting up a theme using the theme editor. There is a significant amount of freedom and space for creative ideas to make creating themes a pleasure while still keeping the core architecture as simple as possible.
+
+A related task is to improve some aspects of the editor theme.
+
+A task such as caching icons for faster startup time, use color icons with modulation (looks better on a light theme, not re-rendering icons when changing from dark to light), and more.
 
 ## Improvement in i18n for games
 
