Update visual scripting proposal.

--- a/GSoC/GSoC-2020.md
+++ b/GSoC/GSoC-2020.md
@@ -96,3 +96,27 @@ This project consists in implementing and exposing and API to allow scripts to a
 
 Related links:
 - https://github.com/godotengine/godot-proposals/issues/229
+
+## Improve Visual Scripting
+
+**Skills:** C/C++
+
+Google Summer of Code 2019 made significant improvements in Visual Scripting / GraphEdit. However, Visual Scripting is still hard to use in the programming and visual shader contexts.
+
+The essential missing feature in Visual Scripting is the ability to collapse a selection of nodes into a function, expand them and then store them in an accessible function library. This function library is retrievable as a resource to be shared in plugins and the current project.
+
+Some other possible improvements to Visual Scripting are:
+
+Allowing scaling a Graph Edit system so that developers can work on more massive graphs.
+
+As Visual Scripts / Visual Shaders become more complicated than previously, it would be beneficial for automatic graph formatting/graph reorganization.
+
+Solve high priority issues in the Godot Engine issue tracker related to Visual Scripting.
+
+Related links:
+- https://gist.github.com/swarnimarun/1523674d76244d531c041d10b778eded
+- VS Zoom https://github.com/godotengine/godot/pull/29091
+- https://en.wikipedia.org/wiki/Layered_graph_drawing
+- Fast and Simple Horizontal Coordinate Assignment. https://link.springer.com/chapter/10.1007/3-540-45848-4_3
+- Size- and Port-Aware Horizontal Node Coordinate Assignment. https://link.springer.com/chapter/10.1007/978-3-319-27261-0_12
+- https://github.com/godotengine/godot/issues?q=is%3Aopen+is%3Aissue+label%3Atopic%3Avisualscript
