--- a/GSoC/GSoC-2021.md
+++ b/GSoC/GSoC-2021.md
@@ -24,6 +24,10 @@ The goal of this project is to design a theme editor, which will generate a them
 
 Another related task is to improve some aspects of the editor theme, such as caching icons for faster startup time, color icons with modulation (looks better on light theme, no re-render of icons when changing from dark to light), and more.
 
+Related proposals:
+- https://github.com/godotengine/godot-proposals/issues/1438
+- https://github.com/godotengine/godot-proposals/issues/1791
+
 ## Automatic arrangement nodes in GraphEdit (VisualScript, VisualShader)
 
 **Skills:** C++
