[GSOC2021] Add DAP middleware proposal
See https://github.com/godotengine/godot-proposals/issues/2494

--- a/GSoC/GSoC-2021.md
+++ b/GSoC/GSoC-2021.md
@@ -73,3 +73,16 @@ This project consists in implementing a pseudo-localization by changing the orig
 See the related proposal for more information:
 
 - https://github.com/godotengine/godot-proposals/issues/1844
+
+
+## Implement DAP-compliant middleware to interact with Editor Debugger
+
+**Skills:** C++, networking 
+
+Godot supports editing of game scripts using external programs, and via the [Language Server Protocol](https://microsoft.github.io/language-server-protocol/) it also provides a standardized way for those programs to support autocompletion and the like. What's still missing is the ability to debug games using an external IDE.
+
+This project consists of implementing a DAP-complain ([Debug Adapter Protocol](https://microsoft.github.io/debug-adapter-protocol/)) server using godot networking facilities, that can be run by the editor, and will provide a standard interface to the debugging functionalities the editor already have.
+
+See the related proposal for more information:
+
+- https://github.com/godotengine/godot-proposals/issues/2494
